# OGX-Mini

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Firmware/ESP32/: CMakeLists.txt  FWDefines.cmake  sdkconfig
Firmware/ESP32/cmake/: integrate_btstack.cmake
Firmware/ESP32/components/: integrate_btstack.py
Firmware/ESP32/components/libfixmath/: CMakeLists.txt
Firmware/ESP32/main/: 1btstack_config.h  CMakeLists.txt  Gamepad.h  Kconfig  Range.h  Reports.h  RingBuffer.h  btstack_config.h  c_wrapper.cpp  c_wrapper.h  main.c  main.cpp
Firmware/ESP32/main/BLEServer/: BLEServer.cpp  BLEServer.h
Firmware/ESP32/main/BTManager/: BTManager.cpp  BTManager.h  BTManager_BP32.cpp
Firmware/ESP32/main/Bluepad32/: Bluepad32.cpp  Bluepad32.h  Gamepad.h
Firmware/ESP32/main/Board/: board_api.cpp  board_api.h  ogxm_log.h
Firmware/ESP32/main/Gamepad/: Gamepad.h
Firmware/ESP32/main/I2CDriver/: I2CDriver.cpp  I2CDriver.h
Firmware/ESP32/main/UserSettings/: DeviceDriverTypes.h  JoystickSettings.cpp  JoystickSettings.h  NVSHelper.h  TriggerSettings.cpp  TriggerSettings.h  UserProfile.cpp  UserProfile.h  UserSettings.cpp  UserSettings.h
Firmware/ESP32/main/bluetooth/: bluetooth.c  bluetooth.h  ring_rumble.h
Firmware/ESP32/main/gamepad/: gamepad.h  range.h
Firmware/ESP32/main/led/: led.c  led.h
Firmware/ESP32/main/log/: log.c  log.h
Firmware/ESP32/main/periph/: i2c_master.c  i2c_master.h
Firmware/ESP32/main/settings/: button_combo.c  button_combo.h  device_types.h  nvs.c  nvs.h  settings.cpp  settings.h
Firmware/ESP32/main/wired/: wired.h  wired_i2c.c  wired_ring.h  wired_spi.c
Firmware/RP2040/: CMakeLists.txt
Firmware/RP2040/cmake/: get_pico_sdk.cmake  get_pico_uart_port.cmake
Firmware/RP2040/src/: Gamepad.h  Range.h  Scale.h  board_config.h  btstack_config.h  main.cpp  sdkconfig.h  tusb_config.h
Firmware/RP2040/src/BLEServer/: BLEServer.cpp  BLEServer.h  att_delayed_response.gatt
Firmware/RP2040/src/Bluepad32/: Bluepad32.cpp  Bluepad32.h
Firmware/RP2040/src/Board/: Config.h  board_api.cpp  board_api.h  esp32_api.cpp  esp32_api.h  ogxm_log.cpp  ogxm_log.h
Firmware/RP2040/src/Board/Pico_WS2812/: WS2812.cpp  WS2812.hpp
Firmware/RP2040/src/Board/board_api_private/: board_api_bt.cpp  board_api_esp32.cpp  board_api_led.cpp  board_api_private.h  board_api_rgb.cpp  board_api_usbh.cpp
Firmware/RP2040/src/Descriptors/: CDCDev.h  DInput.h  N64.h  PS3.h  PS4.h  PS5.h  PSClassic.h  SwitchPro.h  SwitchWired.h  XInput.h  XboxOG.h  XboxOne.h
Firmware/RP2040/src/Gamepad/: Gamepad.h  Range.h  fix16ext.h
Firmware/RP2040/src/I2CDriver/: i2c_driver_4ch.cpp  i2c_driver_4ch.h  i2c_driver_esp32.cpp  i2c_driver_esp32.h
Firmware/RP2040/src/I2CDriver/4Channel/: I2CDriver.h  I2CManager.h  I2CMaster.cpp  I2CMaster.h  I2CSlave.cpp  I2CSlave.h
Firmware/RP2040/src/I2CDriver/ESP32/: I2CDriver.cpp  I2CDriver.h
Firmware/RP2040/src/OGXMini/: Debug.h  OGXMini.cpp  OGXMini.h  OGXMini_4Ch.cpp  OGXMini_4Channel.cpp  OGXMini_ESP32.cpp  OGXMini_PicoW.cpp  OGXMini_Standard.cpp
Firmware/RP2040/src/OGXMini/Board/: ESP32_Bluepad32_I2C.cpp  ESP32_Bluepad32_I2C.h  ESP32_Blueretro_I2C.cpp  ESP32_Blueretro_I2C.h  Four_Channel_I2C.cpp  Four_Channel_I2C.h  PicoW.cpp  PicoW.h  Standard.cpp  Standard.h
Firmware/RP2040/src/TaskQueue/: TaskQueue.cpp  TaskQueue.h
Firmware/RP2040/src/USBDevice/: DeviceManager.cpp  DeviceManager.h  tud_callbacks.cpp
Firmware/RP2040/src/USBDevice/DeviceDriver/: DeviceDriver.cpp  DeviceDriver.h  DeviceDriverTypes.h
Firmware/RP2040/src/USBHost/: HardwareIDs.h  HostManager.h  tuh_callbacks.cpp
Firmware/RP2040/src/USBHost/HIDParser/: HIDJoystick.cpp  HIDJoystick.h  HIDReportDescriptor.cpp  HIDReportDescriptor.h  HIDReportDescriptorElements.cpp  HIDReportDescriptorElements.h  HIDReportDescriptorUsages.cpp  HIDReportDescriptorUsages.h  HIDUtils.cpp  HIDUtils.h  LICENSE
Firmware/RP2040/src/USBHost/HostDriver/: HostDriver.h  HostDriverTypes.h
Firmware/RP2040/src/UserSettings/: JoystickSettings.cpp  JoystickSettings.h  NVSTool.h  TriggerSettings.cpp  TriggerSettings.h  UserProfile.cpp  UserProfile.h  UserSettings.cpp  UserSettings.h
Firmware/pico/: CMakeLists.txt  board_config.h.in  configs.cmake  pico_sdk_import.cmake
Firmware/pico/boards/: ADAFRUIT_FEATHER_RP2040_USBH.cmake  DEVKIT.cmake  DEVKIT_ESP32.cmake  ESP32_I2C.cmake  ESP32_SPI.cmake  FOUR_CHANNEL.cmake  OGXW_HW1.cmake  PI_PICO.cmake  PI_PICO_2.cmake  PI_PICO_2_W.cmake  PI_PICO_2_W_USBH.cmake  PI_PICO_W.cmake  PI_PICO_W_USBH.cmake  WAVESHARE_RP2040_ZERO.cmake  WAVESHARE_RP2350_USBH.cmake  init.cmake
Firmware/pico/src/: assert_compat.h  board_config.h  button_combo.h  main_bluetooth.c  main_bluetooth_usbh.c  main_devkit.c  main_devkit_esp32.c  main_four_channel.c  main_standard.c  main_statndard.c  shared.c  shared.h
Firmware/pico/src/bluetooth/: bluetooth.h
Firmware/pico/src/bluetooth/esp32/: esp32_i2c.c  esp32_spi.c  wired_ring.h
Firmware/pico/src/bluetooth/picow/: btstack_config.h  picow.c  sdkconfig.h
Firmware/pico/src/four_channel/: master.c  master.h  ring.h  slave.c  slave.h
Firmware/pico/src/gamepad/: callbacks.h  gamepad.c  gamepad.h  range.h
Firmware/pico/src/led/: led.cpp  led.h
Firmware/pico/src/led/neopixel/: WS2812.cpp  WS2812.hpp
Firmware/pico/src/log/: log.c  log.h
Firmware/pico/src/ring/: ring_bluetooth.h  ring_i2c.h  ring_shared.h  ring_spi.h  ring_usb.h
Firmware/pico/src/sdcard/: fatfs_io.c  sd_spi.c  sd_spi.h  sdcard.c  sdcard.h
Firmware/pico/src/settings/: button_combo.c  button_combo.h  nvs.c  nvs.h  settings.cpp  settings.h
Firmware/pico/src/usb/: usb_ring.h
Firmware/pico/src/usb/descriptors/: cdc.h  dinput.h  generic_hub.h  msc.h  net.h  ps3.h  ps4.h  ps5.h  psclassic.h  switch.h  switch_pro.h  webapp.h  xboxog_gp.h  xboxog_hub.h  xboxog_sb.h  xboxog_xblc.h  xgip.h  xid.h  xinput.h
Firmware/pico/src/usb/device/: device.c  (+2 more)
Firmware/pico/src/webserver/: webserver.c  webserver.h
Firmware/pico/web/: index.html  index.js  style.css
Firmware/pico/web/modules/: drawUtils.js  gamepad.js  mutex.js  uiProgram.js  uiSettings.js  userSettings.js
(+303 files in other folders)
